--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
     .signage-card{background:linear-gradient(180deg,#0a0f1e,#0e162c);border:2px solid #94a3b8;border-radius:18px;padding:18px;display:grid;gap:10px}
     .signage-card .name{font-weight:900;font-size:24px}
     .signage-card .when{color:#a6b2c7;font-size:18px}
-    .signage-card .remain{font-weight:700}
     .signage-card.full{border-color: var(--danger)}
-    .signage-card .progress{height:14px}
     .clock{font-weight:700;color:#a6b2c7}
     /* signage status */
     .signage-card.ok{border-color: var(--accent)}
@@ -107,6 +105,8 @@
     <div class="actions" id="headerActions">
       <a href="#signage" class="pill" title="デジタルサイネージを開く">🖥️ デジタルサイネージ</a>
       <a href="#admin" class="pill" title="管理画面を開く">🛠️ 管理者モード</a>
+      <!-- ▼ 追加：ログインリンク（未ログイン時に表示） -->
+      <a href="login.html?redirect=index.html#admin" class="pill" id="loginLink">🔐 ログイン</a>
       <span class="pill" id="whoami">未ログイン</span>
       <button id="btnSignOut" class="ghost" style="display:none">ログアウト</button>
     </div>
@@ -164,7 +164,6 @@
   <!-- Firebase SDKs (Modular) -->
   <script type="module">
     // ===== 0) Firebase 設定を入力してください =====
-    // Firebase コンソール → プロジェクト設定 → マイアプリ → Webアプリ から取得した値を貼り付け
     const firebaseConfig = {
       apiKey: "AIzaSyDAn5ARfnk1Zn-5nsIg7U9exCKirZwBS_E",
       authDomain: "workshopdcpt2025.firebaseapp.com",
@@ -175,9 +174,8 @@
       measurementId: "G-FDQ4REQ1QB"
     };
 
-    // ===== 1) SDK 読み込み =====
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signInWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
     import { getFirestore, collection, doc, addDoc, deleteDoc, updateDoc, getDoc, getDocs, onSnapshot, query, where, orderBy, serverTimestamp, runTransaction, increment } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
     const app = initializeApp(firebaseConfig);
@@ -189,7 +187,6 @@
     const $$ = (sel) => Array.from(document.querySelectorAll(sel));
     const fmtWhen = (ts) => {
       if (!ts) return "-";
-      // Firestore Timestamp or JS Date → Date
       const d = ts.toDate ? ts.toDate() : new Date(ts);
       const f = new Intl.DateTimeFormat('ja-JP', { month:'numeric', day:'numeric', weekday:'short', hour:'2-digit', minute:'2-digit' });
       return f.format(d);
@@ -221,33 +218,18 @@
     // ===== 4) 認証（Email/Password） =====
     const whoami = $('#whoami');
     const btnSignOut = $('#btnSignOut');
+    const loginLink = document.getElementById('loginLink');
 
+    // ★ 変更：ログインフォームは index.html では表示せず、login.html にリダイレクト
     function renderLoginPanel(){
-      const container = document.createElement('div');
-      container.className = 'panel';
-      container.style.background = '#0b1224';
-      container.innerHTML = `
-        <h2 style="margin-top:0">管理者ログイン</h2>
-        <div class="grid">
-          <div class="row"><label>メールアドレス</label><input type="email" id="loginEmail" placeholder="admin@example.com"></div>
-          <div class="row"><label>パスワード</label><input type="password" id="loginPass" placeholder="••••••••"></div>
-          <div class="actions"><button id="btnLogin" class="primary">ログイン</button></div>
-          <p class="muted">※ 書き込みはログインしたユーザーのみ可能。サイネージ表示はログイン不要です。</p>
-        </div>`;
-      const adminSection = $('#adminSection');
-      adminSection.innerHTML = '';
-      adminSection.appendChild(container);
-      $('#btnLogin').onclick = async () => {
-        const email = $('#loginEmail').value.trim();
-        const pass = $('#loginPass').value;
-        try{ await signInWithEmailAndPassword(auth, email, pass); }
-        catch(err){ alert('ログインに失敗しました：'+ err.message); }
-      };
+      const to = 'index.html#admin';
+      location.href = `login.html?redirect=${encodeURIComponent(to)}`;
     }
 
     function renderAdminPanel(user){
       whoami.textContent = user ? `ログイン中：${user.email}` : '未ログイン';
       btnSignOut.style.display = user ? 'inline-flex' : 'none';
+      if (loginLink) loginLink.style.display = user ? 'none' : 'inline-flex';
       btnSignOut.onclick = () => signOut(auth);
 
       const adminSection = $('#adminSection');
@@ -277,8 +259,11 @@
     }
 
     onAuthStateChanged(auth, (user) => {
-      if (isSignageMode()) return; // signage では管理UIを描画しない
-      if (user) renderAdminPanel(user); else renderLoginPanel();
+      if (isSignageMode()) { attachWorkshopList(false); return; }
+      // 未ログインならログインページへ（GitHub Pages の入口は常にログインへ誘導）
+      if (!user) { if (loginLink) loginLink.style.display = 'inline-flex'; renderLoginPanel(); return; }
+      // ログイン済みなら管理画面を描画
+      renderAdminPanel(user);
     });
 
     // ===== 5) ワークショップ登録 / 削除 / 参加者登録 =====
@@ -297,7 +282,6 @@
     async function deleteWorkshop(wsId){
       if(!confirm('このワークショップを削除しますか？参加者情報も削除されます。')) return;
       const wRef = byId(wsId);
-      // 参加者を削除 → ワークショップ削除
       try{
         const partsSnap = await getDocs(participantsCol(wsId));
         const batchDeletes = [];
@@ -343,7 +327,7 @@
 
     // ===== 6) リアルタイム一覧（管理用 / サイネージ用） =====
     let unsubWs = null;
-    function attachWorkshopList(forAdmin){
+    function attachWorkshopList(){
       if(unsubWs) { unsubWs(); unsubWs = null; }
       const qWs = query(
         collection(db,'workshops'),
@@ -353,7 +337,7 @@
       unsubWs = onSnapshot(qWs, (snap) => {
         const items = [];
         snap.forEach(docSnap => items.push({ id: docSnap.id, ...docSnap.data() }));
-        if (isSignageMode()) renderSignage(items); else renderWsAdmin(items, forAdmin);
+        if (isSignageMode()) renderSignage(items); else renderWsAdmin(items);
       });
     }
 
@@ -446,35 +430,15 @@
         grid.appendChild(card);
       });
     }
-      // 近い順に、満席は最後に寄せる
-      const sorted = items.slice().sort((a,b)=>{
-        const aFull = (a.attendeeCount||0) >= a.capacity;
-        const bFull = (b.attendeeCount||0) >= b.capacity;
-        if (aFull !== bFull) return aFull ? 1 : -1; // 満席は後ろ
-        return (a.startAt?.toMillis?.()||new Date(a.startAt).getTime()) - (b.startAt?.toMillis?.()||new Date(b.startAt).getTime());
-      });
-      sorted.forEach(w => {
-        const left = Math.max(0, Number(w.capacity) - Number(w.attendeeCount||0));
-        const rate = Math.min(100, Math.round((Number(w.attendeeCount||0) / Number(w.capacity)) * 100));
-        const card = document.createElement('div');
-        card.className = 'signage-card' + (left===0 ? ' full' : '');
-        card.innerHTML = `
-          <div class="name">${w.name}</div>
-          <div class="when">🕒 ${fmtWhen(w.startAt)}</div>
-          <div class="progress"><div style="width:${rate}%"></div></div>
-          <div class="remain">${left===0 ? '満席' : `残 ${left} / ${w.capacity}`}</div>
-        `;
-        grid.appendChild(card);
-      });
-    }
 
     // ===== 7) 初期化 =====
     const boot = () => {
       switchView();
       if (isSignageMode()) {
-        attachWorkshopList(false); // read-only view
+        attachWorkshopList(); // read-only view
       } else {
-        // 認証状態に応じて描画、購読は renderAdminPanel 内で attach
+        // 認証状態に応じて描画（未ログインなら login.html へ）
+        // onAuthStateChanged の中で処理
       }
     };
     boot();
@@ -482,4 +446,5 @@
   </script>
 </body>
 </html>
+
 
